--- a/platformio.ini
+++ b/platformio.ini
@@ -8,12 +8,17 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:uno]
-platform = atmelavr
-board = uno
-framework = arduino
+;[env:uno]
+;platform = atmelavr
+;board = uno
+;framework = arduino
 
 ;[env:nanoatmega328]
 ;platform = atmelavr
 ;board = nanoatmega328
 ;framework = arduino
+
+[env:esp12e]
+platform = espressif8266
+board = esp12e
+framework = arduino
