Fix for new circuit

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,12 +13,12 @@
 ;board = uno
 ;framework = arduino
 
-;[env:nanoatmega328]
-;platform = atmelavr
-;board = nanoatmega328
-;framework = arduino
-
-[env:esp12e]
-platform = espressif8266
-board = esp12e
+[env:nanoatmega328]
+platform = atmelavr
+board = nanoatmega328
 framework = arduino
+
+;[env:esp12e]
+;platform = espressif8266
+;board = esp12e
+;framework = arduino
